# MORA

./: .gitignore  CMakeLists.txt  README.md  morabenchmarkresults.txt
Examples/CSharp/MoraExamples/: MoraExamples.sln
Examples/CSharp/MoraExamples/MoraExamples/: ClientMain.cs  MoraExamples.csproj  ServerMain.cs
Examples/Cpp/: CMakeLists.txt
Examples/Cpp/Serialize/: CMakeLists.txt  ExampleSerialize.cpp
Examples/Java/: pom.xml
Examples/Mora/: Motor.mora  serialisation.mora
Runtimes/CppMora/: 3rd_party_libs.cmake  CMakeLists.txt  Doxyfile.in
Runtimes/CppMora/benchmarks/: benchmark_Streams.cpp
Runtimes/CppMora/cmake/: AddDoctest.cmake  UseCoverage.cmake  UseDocTest.cmake  UseGoogleBenchmark.cmake  UseMora.cmake  UseOpenCppCoverage.cmake  UsePlayground.cmake  compilerUtils.cmake  externalUtils.cmake  installUtils.cmake  safeguards.cmake
Runtimes/CppMora/include/: LogDef.h  MORA.h  MORAExt.h  MORAGen.h  MoraAdapter.h  MoraCommunicator.h  MoraException.h  MoraIdentifier.h  MoraLogging.h  MoraObject.h  MoraPreReq.h  MoraProxy.h  MoraRemoteMethodCall.h  MoraStreams.h  MoraUtils.h
Runtimes/CppMora/playgrounds/: playground_java.cpp
Runtimes/CppMora/src/: Communicator.cpp  ConnectionFactory.cpp  ConnectionManager.cpp  MessageHandler.cpp  MoraAdapter.cpp  MoraCommunicator.cpp  MoraException.cpp  MoraGen.cpp  MoraIdentifier.cpp  MoraLogging.cpp  MoraMessages.cpp  MoraObject.cpp  MoraProxy.cpp  MoraRemoteMethodCall.cpp  MoraTransport.cpp  MoraUtils.cpp  NetMessages.cpp  RemoteMethodCall.cpp  RemoteObjectDescriptions.cpp  TCPConnections.cpp  UDPConnections.cpp  precomp.cpp
Runtimes/CppMora/src/internal/: ConnectionManager.h  Encoding.h  MessageHandler.h  MoraMessages.h  TCPConnections.h  UDPConnections.h  precomp.h
Runtimes/CppMora/src/private/: ConnectionManager.h  MessageHandler.h  MoraTransport.h  TCPConnections.h  UDPConnections.h
Runtimes/CppMora/tests/: TestUtils.h  test_Base.cpp  test_Connect.cpp  test_LoseConnection.cpp  test_Serialize.cpp  test_StartStop.cpp  test_Streams.cpp
Runtimes/CppMora/tests/TestSerializer/: TestSerializerService.cpp  TestSerializerService.h  loguru.cpp  loguru.h  serialisation.mora
Runtimes/CsMora/: CsMora.sln
Runtimes/CsMora/CsMora/: CsMora.csproj  RPC.cs  RPCMessages.cs  RPCTypes.cs  packages.config
Runtimes/CsMora/CsMora/Mora/: Common.cs  IMoraAdapter.cs  IMoraProxy.cs  Identifiers.cs  MethodHandler.cs  MoraExceptions.cs  RemoteMethodCall.cs
Runtimes/CsMora/CsMora/Mora/Com/: ClientConnections.cs  Communicator.cs  Encoding.cs  IConnections.cs  MoraMessages.cs  NetMessages.cs
Runtimes/CsMora/CsMora/Mora/Com/TCP/: TCPConnections.cs
Runtimes/CsMora/CsMora/Mora/Com/UDP/: UDPConnections.cs
Runtimes/CsMora/CsMora/Mora/Stream/: InputStreams.cs  MoraStreams.cs  OutputStreams.cs
Runtimes/JMora/: pom.xml
cmake/: UseDocTest.cmake  UseMora.cmake
de.sos.mora.parent/: pom.xml
de.sos.mora.parent/de.sos.mora/: plugin.xml  pom.xml
de.sos.mora.parent/de.sos.mora.feature/: feature.xml  pom.xml
de.sos.mora.parent/de.sos.mora.ide/: pom.xml
de.sos.mora.parent/de.sos.mora.ide/src-gen/de/sos/ide/: AbstractMORAIdeModule.java
de.sos.mora.parent/de.sos.mora.ide/src/de/sos/ide/: MORAIdeModule.xtend  MORAIdeSetup.xtend
de.sos.mora.parent/de.sos.mora.ide/xtend-gen/de/sos/ide/: MORAIdeModule.java  MORAIdeSetup.java
de.sos.mora.parent/de.sos.mora.repository/: category.xml  pom.xml
de.sos.mora.parent/de.sos.mora.target/: de.sos.mora.target.target  pom.xml
de.sos.mora.parent/de.sos.mora.tests/: pom.xml
de.sos.mora.parent/de.sos.mora.tests/src-gen/de/sos/tests/: MORAInjectorProvider.java
de.sos.mora.parent/de.sos.mora.tests/src/de/sos/tests/: MORAParsingTest.xtend
de.sos.mora.parent/de.sos.mora.tests/xtend-gen/de/sos/tests/: MORAParsingTest.java
de.sos.mora.parent/de.sos.mora.ui/: plugin.xml  pom.xml
de.sos.mora.parent/de.sos.mora.ui.tests/: pom.xml
de.sos.mora.parent/de.sos.mora.ui/src-gen/de/sos/ui/: AbstractMORAUiModule.java  MORAExecutableExtensionFactory.java
de.sos.mora.parent/de.sos.mora.ui/src-gen/de/sos/validation/: MORAValidatorConfigurationBlock.java
de.sos.mora.parent/de.sos.mora.ui/src/de/sos/ui/: MORAUiModule.xtend
de.sos.mora.parent/de.sos.mora.ui/xtend-gen/de/sos/ui/: MORAUiModule.java
de.sos.mora.parent/de.sos.mora.web/: pom.xml
de.sos.mora.parent/de.sos.mora.web/WebRoot/: index.html  style.css
de.sos.mora.parent/de.sos.mora.web/src-gen/de/sos/web/: AbstractMORAWebModule.java
de.sos.mora.parent/de.sos.mora.web/src/de/sos/web/: MORAServlet.xtend  MORAWebModule.xtend  MORAWebSetup.xtend  ServerLauncher.xtend
de.sos.mora.parent/de.sos.mora.web/xtend-gen/de/sos/web/: MORAServlet.java  MORAWebModule.java  MORAWebSetup.java  ServerLauncher.java
de.sos.mora.parent/de.sos.mora/.launch/: Generate MORA (mora) Language Infrastructure.launch  Launch Runtime Eclipse.launch
de.sos.mora.parent/de.sos.mora/src-gen/de/sos/: AbstractMORARuntimeModule.java  MORA.xtextbin  MORAStandaloneSetupGenerated.java
de.sos.mora.parent/de.sos.mora/src-gen/de/sos/mORA/: AbstractType.java  Annotation.java  CSharpOptions.java  CppOptions.java  EnumDecl.java  Exception.java  Include.java  Interface.java  JavaOptions.java  ListTypeDecl.java  Literal.java  MORAFactory.java  MORAPackage.java  Member.java  Method.java  Model.java  Options.java  Parameter.java  PrimTypeDecl.java  PrimTypeLiteral.java  SingleTypeDecl.java  StructDecl.java  TypeDecl.java
de.sos.mora.parent/de.sos.mora/src-gen/de/sos/scoping/: AbstractMORAScopeProvider.java
de.sos.mora.parent/de.sos.mora/src-gen/de/sos/serializer/: MORASemanticSequencer.java  MORASyntacticSequencer.java
de.sos.mora.parent/de.sos.mora/src-gen/de/sos/services/: MORAGrammarAccess.java
de.sos.mora.parent/de.sos.mora/src-gen/de/sos/validation/: AbstractMORAValidator.java  MORAConfigurableIssueCodesProvider.java
de.sos.mora.parent/de.sos.mora/src/de/sos/: GenerateMORA.mwe2  MORA.xtext  MORARuntimeModule.xtend  MORAStandaloneSetup.xtend
de.sos.mora.parent/de.sos.mora/xtend-gen/de/sos/: MORARuntimeModule.java  MORAStandaloneSetup.java
(+143 files in other folders)
